Dec 24 2002  2.9.0  Started new Kismet development cycle

Dec 24 2002  2.8.0  Released Kismet 2.8.0.  Updates include:
                     Multiple capture sources
                     Multiple server support
                     Revamped client/server protocol
                     Packet processing speed boosts
                     Runtime WEP decoding
                     WSP100 Remote Sensor capture support
                     Cygwin support
                     Improved Turbocell/Karlnet dissection
                     Netmask range options for allowed clients
                     Client logging in XML
                     Dozens of bugfixes.

Dec 24 2002  2.7.1  Added writing of client info to the XML file, updated the
                     Kismet DTD.
                    Updated conf files to 2.8.0
Dec 23 2002  2.7.1  Kismet is now 1 year old!
                    Updated libpcap version to the current libpcap-devel.
                     Anyone fetching updates from CVS should use the -P flag to
                     prune empty directories.
                    Updated README w/ new documentation, merged most of the docs/
                     directory into one file.
                    More 2.8 docs updates
Dec 22 2002  2.7.1  Fixed multiserver alert displays in panels frontend
                    Fixed adhoc network handling - it once again uses the 
                     actual advertised BSSID, but this may result in a creeping
                     list of networks as the firmware changes its bssid
                     continually.
                    Fixed very stupid pointer math which caused several issues
Dec 20 2002  2.7.1  Fixed turbocell ssid's not being munged
Dec 19 2002  2.7.1  Fixed gps point logging of PHY packets
Dec 17 2002  2.7.1  Fixed kismet_hopper on systems with old wireless extention
                     versions.
                    Revamped packet capture stream.  Live-decoded wep packets